# Starlight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: DownloadVulkan.cmake  starlightConfig.cmake.in
include/: BasicDevice.hpp  BasicRenderer.hpp  BasicWindow.hpp  DefaultFinalRenderControlPolicy.hpp  Renderer.hpp  SceneRenderer.hpp  StarEngine.hpp  SwapChainRenderer.hpp
include/builders/: SceneBuilder.hpp
include/common/: BasicCamera.hpp  BufferHandle.hpp  Camera.hpp  Compiler.hpp  ComputeTexture.hpp  ConfigFile.hpp  FileTexture.hpp  GeneratedTexture.hpp  Handle.hpp  Interactivity.hpp  KeyStates.hpp  MeshVertexInfo.hpp  RenderOptions.hpp  RuntimeUpdateTexture.hpp  Scene.hpp  StarMaterialMesh.hpp  Texture.hpp  ThreadSharedResource.hpp  VulkanVertex.hpp
include/common/buffers/: GlobalInfo.hpp  InstanceModelInfo.hpp  InstanceNormalInfo.hpp  LightInfo.hpp  ObjAABBInfo.hpp  ObjIndicesInfo.hpp  ObjVertInfo.hpp  ObjVertInfoFile.hpp  TransferRequest_GlobalInfo.hpp  (+6 more)
include/controllers/: CameraController.hpp  OptionsController.hpp
include/core/: DeviceContext.hpp  DeviceManager.hpp  HandleContainer.hpp  LinearHandleContainer.hpp  ManagedHandleContainer.hpp  MappedHandleContainer.hpp  RenderingInstance.hpp  RenderingSurface.hpp  SwapChainSupportDetails.hpp  SystemContext.hpp
include/entities/: GameObject.hpp
include/enums/: Enums.hpp  Key.hpp
include/event/: ConsumeDescriptorRequests.hpp  EnginePhaseComplete.hpp  TriggerScreenshot.hpp
include/internals/: CommandBufferContainer.hpp  ManagerStorageContainer.hpp  TransferWorker.hpp
include/job/: FrameScheduler.hpp  IWorkerBase.hpp  ImageWriteTask.hpp  Manager.hpp  PrintTask.hpp  Task.hpp  TaskContainer.hpp  TaskFactory.hpp  TaskManager.hpp  TaskTracker.hpp  Transfer.hpp  TransferWorker.hpp  Worker.hpp
include/managers/: LightManager.hpp  ManagerBuffer.hpp  ManagerCommandBuffer.hpp  ManagerDescriptorPool.hpp  ManagerRenderResource.hpp  ManagerTexture.hpp  MapManager.hpp  MaterialManager.hpp  ObjectManager.hpp  ShaderManager.hpp  TextureManager.hpp
include/modules/: InteractionSystem.hpp  RenderMemorySystem.hpp  RenderResourceSystem.hpp
include/renderers/: StarRenderMaterial.hpp  StarRenderMesh.hpp  StarRenderObject.hpp
include/service/: InitParameters.hpp  ScreenCapture.hpp  ScreenCaptureFactory.hpp  Service.hpp
include/starlight/: DefaultFinalRenderControlPolicy.hpp  ShaderResolver.hpp  StarEngine.hpp
include/structs/: Color.hpp  Handle.hpp  Material.hpp  Mesh.hpp  Ray.hpp  RenderingTargetInfo.hpp  Triangle.hpp  Vertex.hpp
include/systems/: StarRenderGroup.hpp  StarSystemRenderObj.hpp  StarSystemRenderPointLight.hpp
include/templates/: FileResourceContainer.hpp  FileResourceManager.hpp  StarApplication.hpp  StarMemoryManager.hpp  StarResourceContainer.hpp
include/virtual/: BufferManagerRequest.hpp  BufferMemoryTransferRequest.hpp  ManagerController.hpp  ManagerController_Controller.hpp  ManagerController_RenderResource_Buffer.hpp  ManagerController_RenderResource_Texture.hpp  MemoryTransferRequest.hpp  Shader.hpp  StarApp.hpp  StarCamera.hpp  StarCommand.hpp  StarDevice.hpp  StarEngine.hpp  StarEntity.hpp  StarManager.hpp  StarMaterial.hpp  StarMesh.hpp  StarObject.hpp  StarPipeline.hpp  StarRenderObject.hpp  StarRenderer.hpp  StarScene.hpp  StarShader.hpp  StarSystemPipeline.hpp  StarWindow.hpp  TextureManagerRequest.hpp  TextureMemoryTransferRequest.hpp  TransferRequest_Buffer.hpp  TransferRequest_Memory.hpp  TransferRequest_Texture.hpp
include/worker/: Worker_ImageWriter.hpp
include/wrappers/: Allocator.hpp  ScreenshotCommandBuffer.hpp
src/: BasicDevice.cpp  BasicRenderer.cpp  BasicWindow.cpp  DefaultFinalRenderControlPolicy.cpp  ManagerShader.cpp  SceneRenderer.cpp  StarEngine.cpp  SwapChainRenderer.cpp  main.cpp
src/builders/: SceneBuilder.cpp
src/common/: BasicCamera.cpp  Compiler.cpp  ComputeTexture.cpp  ConfigFile.cpp  FileTexture.cpp  GeneratedTexture.cpp  Handle.cpp  Interactivity.cpp  KeyStates.cpp  MeshVertexInfo.cpp  RuntimeUpdateTexture.cpp  Texture.cpp
src/controllers/: CameraController.cpp  OptionsController.cpp
src/core/: DeviceContext.cpp  DeviceManager.cpp  ManagedHandleContainer.cpp  RenderingInstance.cpp  RenderingSurface.cpp  SwapChainSupportDetails.cpp  SystemContext.cpp
src/entities/: GameObject.cpp
src/event/: ConsumeDescriptorRequests.cpp
src/internals/: CommandBufferContainer.cpp  ManagerStorageContainer.cpp  TransferWorker.cpp
src/job/: FrameScheduler.cpp  IWorkerBase.cpp  ImageWriteTask.cpp  PrintTask.cpp  Task.cpp  TaskContainer.cpp  TaskFactory.cpp  TaskManager.cpp  TaskTracker.cpp  Transfer.cpp  TransferWorker.cpp  Worker.cpp
src/managers/: LightManager.cpp  ManagerBuffer.cpp  ManagerCommandBuffer.cpp  ManagerDescriptorPool.cpp  ManagerRenderResource.cpp  ManagerTexture.cpp  MapManager.cpp  MaterialManager.cpp  ObjectManager.cpp  ShaderManager.cpp  TextureManager.cpp
src/modules/: InteractionSystem.cpp  RenderMemorySystem.cpp  RenderResourceSystem.cpp
src/renderers/: StarRenderMaterial.cpp  StarRenderMesh.cpp  StarRenderObject.cpp
src/service/: ScreenCaptureFactory.cpp
src/starlight/: DefaultFinalRenderControlPolicy.cpp  ShaderResolver.cpp  StarEngine.cpp
src/systems/: StarRenderGroup.cpp  StarSystemRenderObj.cpp  StarSystemRenderPointLight.cpp
src/templates/: StarApplication.cpp
src/virtual/: BufferManagerRequest.cpp  BufferMemoryTransferRequest.cpp  ManagerController.cpp  ManagerController_Controller.cpp  ManagerController_RenderResource_Buffer.cpp  ManagerController_RenderResource_Texture.cpp  MemoryTransferRequest.cpp  StarCamera.cpp  StarCommand.cpp  StarDevice.cpp  StarEngine.cpp  StarEntity.cpp  StarManager.cpp  StarMaterial.cpp  StarMesh.cpp  StarObject.cpp  StarPipeline.cpp  StarRenderer.cpp  StarScene.cpp  StarShader.cpp  StarSystemPipeline.cpp  StarWindow.cpp  TextureManagerRequest.cpp  TextureMemoryTransferRequest.cpp  TransferRequest_Buffer.cpp  TransferRequest_Memory.cpp  TransferRequest_Texture.cpp
src/worker/: Worker_ImageWriter.cpp  Worker_Transfer.cpp
src/wrappers/: Allocator.cpp  ScreenshotCommandBuffer.cpp
(+819 files in other folders)
